--- a/student-portal/.cpanel.yml
+++ b/student-portal/.cpanel.yml
@@ -1,4 +1,6 @@
+---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/example/public_html/
-    - /bin/cp -R student-portal $DEPLOYPATH
+    - export DEPLOYPATH=/home/haskenfa/public_html/student-portal
+    - /bin/cp * $DEPLOYPATH
+   
